'sharding-jdbc广播表测试'

--- a/src/main/resources/sharding_jdbc.properties
+++ b/src/main/resources/sharding_jdbc.properties
@@ -1,13 +1,3 @@
-server.port=8989
-
-spring.application.name=sharding-jdbc-learn
-server.servlet.context-path=/sharding-jdbc-learn
-# 设置覆盖重复的bean
-spring.main.allow-bean-definition-overriding=true
-# 设置字段映射为驼峰形式
-mybatis.configuration.map-underscore-to-camel-case=true
-mybatis.mapper-locations=classpath:mapper/*.xml
-
 # 配置sharding-jdbc数据源 可以配置多个
 spring.shardingsphere.datasource.names=m1,m2
 
@@ -40,17 +30,7 @@ spring.shardingsphere.sharding.tables.t_order.database-strategy.inline.algorithm
 spring.shardingsphere.sharding.tables.t_order.table-strategy.inline.sharding-column=id
 spring.shardingsphere.sharding.tables.t_order.table-strategy.inline..algorithm-expression=t_order_$->{id%2}
 
-# 配置公共表
-spring.shardingsphere.sharding.broadcast-tables=t_dict
 
-# 打开日志 查看sharding-jdbc执行的真正sql
+
+# 打开sql日志 查看sharding-jdbc执行的真正sql
 spring.shardingsphere.props.sql.show=true
-
-
-# 日志级别配置
-logging.level.root=info
-logging.level.org.springframeworkweb=info
-logging.level.druid.sql=debug
-logging.level.com.itheima.dbsharding=debug
-
-
