删除无用代码

--- a/src/main/resources/application.properties
+++ b/src/main/resources/application.properties
@@ -38,7 +38,7 @@ spring.shardingsphere.sharding.tables.t_order.database-strategy.inline.algorithm
 
 # 配置分表策略 t_order_$->{id%2} $符号会被括号里面的数据替换掉
 spring.shardingsphere.sharding.tables.t_order.table-strategy.inline.sharding-column=id
-spring.shardingsphere.sharding.tables.t_order.table-strategy.inline..algorithm-expression=t_order_$->{id%2}
+spring.shardingsphere.sharding.tables.t_order.table-strategy.inline.algorithm-expression=t_order_$->{id%2}
 
 # ===========sharding-jdbc公共表配置配置===============
 # 配置公共表
@@ -68,7 +68,7 @@ spring.shardingsphere.sharding.master-slave-rules.ds1.slave-data-source-names=s0
 spring.shardingsphere.sharding.master-slave-rules.ds2.master-data-source-name=m1
 spring.shardingsphere.sharding.master-slave-rules.ds2.slave-data-source-names=s0
 
-# 配置从数据库的数据节点
+# 配置主从数据库的数据节点 实现读写分离
 spring.shardingsphere.sharding.tables.t_order.actual-data-nodes=ds$->{0..2}.t_order_$->{0..1}
 
 # 打开日志 查看sharding-jdbc执行的真正sql
