--- a/src/main/resources/application-sharding-jdbc.properties
+++ b/src/main/resources/application-sharding-jdbc.properties
@@ -64,8 +64,9 @@ spring.shardingsphere.sharding.tables.t_order.actual-data-nodes=ds$->{0..2}.t_or
 # 测试数据脱敏
 spring.shardingsphere.rules.encrypt.encryptors.name_encryptor.type=AES
 spring.shardingsphere.rules.encrypt.encryptors.name_encryptor.props.aes-key-value=123456abc
-spring.shardingsphere.rules.encrypt.tables.t_user.columns.name.cipher-column=name
-spring.shardingsphere.rules.encrypt.tables.t_user.columns.name.encryptor-name=name_encryptor
+spring.shardingsphere.rules.encrypt.tables.t_order.columns.name_encrypt.cipher-column=name_encrypt
+spring.shardingsphere.rules.encrypt.tables.t_order.columns.name_encrypt.encryptor-name=name_encryptor
+spring.shardingsphere.props.query-with-cipher-comlum=true
 
 # 打开日志 查看sharding-jdbc执行的真正sql
 spring.shardingsphere.props.sql.show=true
